--- a/lettere.css
+++ b/lettere.css
@@ -88,5 +88,43 @@ header h3 {
     color: #333;
 }
 
+/* Slideshow container */
+.slideshow-container {
+    position: relative;
+    max-width: 100%;
+    margin: auto;
+}
 
+/* Nascondi le immagini di default 
+.imgDiario {
+    display: none;
+}
+
+/* Pulsanti di navigazione */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.8);
+}
+
+/* Posiziona il pulsante "next" a destra */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* Stile dei pulsanti al passaggio del mouse */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,1);
+}
 
