--- a/lettere.css
+++ b/lettere.css
@@ -11,11 +11,11 @@ body {
 
 header {
     width: 100%;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 20px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #ffffff;
     margin-bottom: 20px;
 }
 
@@ -24,8 +24,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #33ccff;
-    color:#fff;
+    background-color: #ffffff;
+    color: #333;
     font-size: 20px;
     line-height: 1.4;
     word-spacing: 0.1 em;
@@ -41,7 +41,7 @@ header h3{
 }
 
 main h1, h2, h3 {
-    color: #ffffff;
+    color: #333;
     margin: 0;
 }
 
@@ -49,7 +49,7 @@ img {
     width: 600px;
     height: auto;
     max-width: 100%;
-    border: 5px solid #33ccff; 
+    border: 5px solid #ffffff; 
 }
 
 
@@ -79,9 +79,9 @@ header h3 {
 
 #informazioni{
     color:#333;
-    background-color: #ffdd99;
+    background-color: #ffffff;
     margin-top: 20px;
-    border-top: 1px solid #ffdd99;
+    border-top: 1px solid #ffffff;
 }
 
 #informazioni h1, #informazioni h2, #informazioni h3{
